--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,1 +1,60 @@
+.card-body-items-index {
+    text-align: -webkit-center;
+}
 
+.buttons-subitems {
+    align-self: center;
+    text-align: center;
+    text-align: right;
+}
+
+.buttons-questions {
+    align-self: center;
+    text-align: center;
+    text-align: right;
+}
+
+.buttons-questions i{
+    font-size: 12px;
+}
+
+.name-subitems{
+    font-size: large;
+}
+
+.name-questions {
+    font-style: italic;
+}
+
+.teste {
+    width: 80%;
+    min-height: 130px;
+    background-color: rgba(18, 20, 21, 0.03);
+    border: solid 0px #0fce3fa2;
+    border-radius: 6px;
+    padding: 20px;
+    cursor: pointer;
+    transition: all 0.2s; /* Add smooth transition for the return animation */
+    transition-timing-function: linear;
+}
+
+.teste i {
+    font-size: 30px;
+}
+
+.teste:hover {
+    width: 82%;
+    min-height: 135px;
+    border: solid 2px #0fce3fa2;
+}
+
+@keyframes expand {
+    0% {
+        width: 80%;
+        min-height: 130px;
+    }
+    100% {
+        width: 82%;
+        min-height: 135px;
+    }
+}
